@@ -218,7 +218,6 @@ static const struct {
 
 /* ------------------------------------------------------------------------ */
 static HWND main_hwnd;
-static HWND slider_hwnd;
 
 static int emu_menu;
 
